# ChangeLog for dev-libs/libprelude
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libprelude/Attic/ChangeLog,v 1.73 2011/01/10 20:53:36 tomka Exp $

  10 Jan 2011; Thomas Kahle <tomka@gentoo.org> libprelude-0.9.15.2.ebuild,
  libprelude-0.9.22.ebuild:
  x86 dropped stable per bug 318839

  06 Jan 2011; Jeroen Roovers <jer@gentoo.org> libprelude-1.0.0-r1.ebuild,
  +files/libprelude-1.0.0-libtool.patch:
  Fix building with libtool 2.4 by Radoslaw Szkodzinski (bug #347079).

*libprelude-1.0.0-r1 (27 May 2010)

  27 May 2010; Jeroen Roovers <jer@gentoo.org> -libprelude-1.0.0.ebuild,
  +libprelude-1.0.0-r1.ebuild:
  Install Perl modules into vendor-dir (bug #298455).

*libprelude-1.0.0 (27 May 2010)

  27 May 2010; Jeroen Roovers <jer@gentoo.org> +libprelude-1.0.0.ebuild:
  Version bump thanks to Thomas McShane (bug #321251).

  28 Feb 2010; Mark Loeser <halcy0n@gentoo.org> metadata.xml:
  I no longer use this on any systems, removing myself as the maintainer

  02 Oct 2009; Mark Loeser <halcy0n@gentoo.org> libprelude-0.9.24.ebuild,
  metadata.xml:
  Add easy-bindings USE flag; bug #286970

  09 Aug 2009; nixnut <nixnut@gentoo.org> libprelude-0.9.22.ebuild:
  ppc stable #275702

  21 Jul 2009; <chainsaw@gentoo.org> libprelude-0.9.22.ebuild:
  Marked stable on AMD64 as requested by Arfrever Frehtes Taifersar Arahesis
  <arfrever@gentoo.org> in bug #275702.

*libprelude-0.9.24 (12 Jul 2009)

  12 Jul 2009; Mark Loeser <halcy0n@gentoo.org> -libprelude-0.9.3.ebuild,
  -libprelude-0.9.21.3.ebuild, +libprelude-0.9.24.ebuild:
  Version bump and remove old

  01 Jul 2009; Raúl Porcel <armin76@gentoo.org> libprelude-0.9.22.ebuild:
  arm/ia64/sparc stable wrt #275702

  30 Jun 2009; Christian Faulhammer <fauli@gentoo.org>
  libprelude-0.9.22.ebuild:
  stable x86, bug 275702

  28 Jun 2009; Tobias Klausmann <klausman@gentoo.org>
  libprelude-0.9.22.ebuild:
  Stable on alpha, bug #275702
